<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/deprecated_warning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/large_content_padding"
        android:text="@string/deprecation_warning"
        android:textSize="20sp" />

    <Button
        android:id="@+id/open_debug_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_content_padding"
        android:text="@string/open_debug_menu" />

    <Button
        android:id="@+id/perform_network_request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_content_padding"
        android:text="@string/perform_network_request" />

    <Button
        android:id="@+id/add_log_message_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_content_padding"
        android:text="@string/add_log_message" />

    <Button
        android:id="@+id/open_login_screen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_content_padding"
        android:text="@string/open_login_screen" />

</LinearLayout>